--- a/assets/MyFontsWebfontsKit.css
+++ b/assets/MyFontsWebfontsKit.css
@@ -19,9 +19,10 @@
  * © 2017 MyFonts Inc
 */
 
-
-
-
-  
-@font-face {font-family: 'Cartwheel';src: url('webfonts/334B49_0_0.eot');src: url('webfonts/334B49_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/334B49_0_0.woff2') format('woff2'),url('webfonts/334B49_0_0.woff') format('woff'),url('webfonts/334B49_0_0.ttf') format('truetype');}
- 
+@font-face {
+  font-family: "Cartwheel";
+  src: url("webfonts/334B49_0_0.eot");
+  src: url("webfonts/334B49_0_0.eot?#iefix") format("embedded-opentype"),
+    url("webfonts/334B49_0_0.woff2") format("woff2"), url("webfonts/334B49_0_0.woff") format("woff"),
+    url("webfonts/334B49_0_0.ttf") format("truetype");
+}
